--- a/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
@@ -2,6 +2,8 @@
 <%@ page pageEncoding="UTF-8" %>
 <link href="<c:url value="/resources/css/style_main.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/tabs.css" />" rel="stylesheet">
+<link href="<c:url value="/resources/css/form.css" />" rel="stylesheet">
+<link href="<c:url value="/resources/css/footer.css" />" rel="stylesheet">
 
 <div class="sidebar1">
     <h4>Жанры:</h4>
