--- a/src/main/webapp/WEB-INF/views/jspf/adminf/add_genre.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/add_genre.jspf
@@ -1,4 +1,4 @@
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
+<%--<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>--%>
 <%@ page pageEncoding="UTF-8" %>
 
 <div class="edit_penal">
