--- a/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
@@ -3,6 +3,8 @@
 <link href="<c:url value="/resources/css/tabs.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/form.css" />" rel="stylesheet">
 <link href="<c:url value="/resources/css/footer.css" />" rel="stylesheet">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 
 <div class="sidebar1">
     <h4>Жанры:</h4>
