added dto entities and rest controller for rest service interaction

--- a/src/main/webapp/WEB-INF/views/jspf/adminf/top10.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/top10.jspf
@@ -75,7 +75,7 @@
         <div class="admin_penal">
 
             <c:choose>
-                <c:when test="${not empty topTenClients}">
+                <c:when test="${not empty topTenBooks}">
                     <br><strong>Топ-10 товаров</strong>
 
                     <style>
