--- a/src/main/webapp/WEB-INF/views/jspf/adminf/add_genre.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/add_genre.jspf
@@ -16,7 +16,7 @@
                     <label for="add_genre_name">Название:</label><input name="add_genre_name" type="text"
                                                                         id="add_genre_name">
                 </div>
-                <span style="color: red; float: right" id="error"></span>
+                <span style="color: red; float: left" id="error"></span>
 
                 <input type="hidden" name="action" value="add"></p>
                 <p><input type="submit" name="submit" id="submit1" value="Сохранить"></p>
@@ -77,7 +77,7 @@
 
     <br><strong>Редактирование жанра</strong>
 
-    <form name="genre_edit_form" action="/admin/edit_genre" method="post">
+    <form name="genre_edit_form" id="genre_edit_form" action="/admin/edit_genre" method="post">
         <div class="edit_book_info">
             <div>
                 <div class="field">
@@ -89,13 +89,41 @@
                 </select>
                 </div>
                 <div class="field">
-                    <label for="genre_name_new">Введите его новое имя:</label><input name="genre_name_new" type="text"
-                                                                                     id="genre_name_new">
+                    <label for="genre_name_new">Введите его новое имя:</label>
+                    <input name="genre_name_new" type="text" id="genre_name_new">
                 </div>
-                <input type="hidden" name="action" value="edit"></p>
-                <p><input type="submit" value="Редактировать"></p>
+                <span style="color: red; float: right" id="error_name_uniq"></span>
+
+                <div class="field">
+                    <p><input type="submit" value="Редактировать"></p>
+                </div>
+
             </div>
         </div>
     </form>
 
 </div>
+<script>
+
+    function genreNameUniqValidate() {
+        var jqXHR = $.ajax({
+            url: 'admin/ajaxGenreValidation',
+            data: ({genreName: $('#genre_name_new').val()}),
+            async: false,
+            success: function (data) {
+                if (data.length > 1) {
+                    $('#error_name_uniq').html(data);
+                }
+            }
+        });
+        return jqXHR.responseText < 2;
+    }
+
+    $(document).ready(function () {
+        $("#genre_edit_form").submit(function () {
+            var isValidated = genreNameUniqValidate();
+            return isValidated;
+        });
+    });
+
+</script>
