--- a/src/main/webapp/WEB-INF/views/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/header.jspf
@@ -11,123 +11,27 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Онлайн-магазин</title>
-
-    <script type="text/javascript">
-        //        $(document).ready(doAjaxPost);
-
-        function doAjaxPost() {
-            $.ajax({
-                type: "GET",
-                url: "books/subView",
-                success: function (response) {
-                    $("#subViewDiv").html(response);
-                }
-            });
-        }
-
-
-
-        //        function totalSumm() {
-        //            var quantity = document.getElementById("books_quantity").value;
-        //            var bookPrice = document.getElementById("book_price").value;
-        //            document.getElementById('total_summ_of_line').value = quantity * bookPrice;
-        //            totalRefreshOfCart();
-        //
-        //        };
-
-
-        function totalRefreshOfCart() {
-
-//            var lines = document.getElementsByClassName('line');
-
-//            var quantities = document.getElementsByName('books_quantity');
-//            var prices = document.getElementsByName('book_price');
-//
-//            var all = 0;
-//
-//            for (var i = 0; i < quantities.length; i++) {
-//                for (var j = 0; j < prices.length; j++) {
-//                    alert(quantities.item(i).attributes.getNamedItem("value"));
-//                    all += parseInt(quantities.item(i).attributes.getNamedItem("value")) * parseInt(prices.item(j).attributes.getNamedItem("value"));
-//                }
-//
-//                alert(all);
-//            }
-
-//
-//            document.getElementById("total_summ_of_order")
-//
-//
-//            for (var i = 0; i < lines.length; i++) {
-//                var childNodes = lines.item(i).childNodes;
-//                for (var h = 0; h < childNodes.length; h++) {
-//                    var childs = childNodes.item(h).childNodes;
-//                    //alert(child);
-//                    for (var g = 0; g < childs.length; g++) {
-//                        var child1 = childs.item(g).childNodes;
-//                        var item = child1.item(g).attributes.getNamedItem("id");
-//                        alert(item);
-//
-//                    }
-//
-//                }
-//            }
-
-            //alert(lines.item(i));
-
-//                var attrs = lines.item(i).attributes;
-//                var isThisLine = false;
-//
-//                for (var g = 0; g < attrs.length; g++) {
-//                    if (attrs[g].name == "id" && attrs[g].value == "books_quantity"){
-//                        isThisLine = true;
-//                    }
-//                    if(isThisLine){
-//                        if(attrs[g].name == "value"){
-//                            alert("books_quantity = " + attrs[g].value);
-//                        }
-//                    }
-
-
-//
-//
-//                alert('books_quantity ' + quantity);
-//
-//                var bookPrice = lines.item(i).attributes.getNamedItem('book_price');
-//                lines.item(i).attributes.getNamedItem('total_summ_of_line').value = quantity * bookPrice;
-//
-//                var currSummOfOrder = document.getElementById('total_summ_of_order').value;
-//                var currSummOfLine = lines.item(i).attributes.getNamedItem('total_summ_of_line');
-//
-//                document.getElementById('total_summ_of_order').value = parseInt(currSummOfOrder) + parseInt(currSummOfLine);
-
-        }
-        ;
-
-    </script>
-
 </head>
 <body>
-<input type="button" value="GO!" onclick="doAjaxPost();"/>
 
 <div id="subViewDiv"></div>
 
     <%
-            request.setCharacterEncoding("UTF-8");
-            String searchString = "";
-
-            if (request.getParameter("search_string") != null) {
-                searchString = request.getParameter("search_string");
-                session.setAttribute("search_string", searchString);
-            } else if (session.getAttribute("search_string") != null) {
-                searchString = session.getAttribute("search_string").toString();
-            } else {
-                session.setAttribute("search_string", searchString);
-            }
-
-            if (request.getParameter("username") != null) {
-                session.setAttribute("username", request.getParameter("username"));
-            }
+//            request.setCharacterEncoding("UTF-8");
+//            String searchString = "";
+//
+//            if (request.getParameter("search_string") != null) {
+//                searchString = request.getParameter("search_string");
+//                session.setAttribute("search_string", searchString);
+//            } else if (session.getAttribute("search_string") != null) {
+//                searchString = session.getAttribute("search_string").toString();
+//            } else {
+//                session.setAttribute("search_string", searchString);
+//            }
+//
+//            if (request.getParameter("username") != null) {
+//                session.setAttribute("username", request.getParameter("username"));
+//            }
 
         %>
 <div class="container">
@@ -142,31 +46,10 @@
 
         </div>
         <div class="welcome">
-            <%
-                //                String userName = "Guest";
-//
-//                if (session.getAttribute("j_username") != null) {
-//                    userName = (String) session.getAttribute("j_username");
-//                }
-//
-//                session.setAttribute("username", userName);
-//
-//                String nameForGreeting = null;
-//                if (request.getUserPrincipal() != null) {
-//                    nameForGreeting = request.getUserPrincipal().getName().toString();
-//                } else {
-//                    nameForGreeting = userName;
-//                }
-//
-//                session.setAttribute("name_for_greeting", nameForGreeting);
-
-            %>
-
-            <%--<h5>Добро пожаловать, <%=nameForGreeting%>!</h5>--%>
-
             <c:choose>
                 <c:when test="${loggedIn}">
-                    <h5>Добро пожаловать, <security:authentication property="principal.username"/>!</h5>
+                    <h5>Добро пожаловать, <security:authentication
+                            property="principal.username"/>!</h5>
                 </c:when>
                 <c:otherwise>
                     <h5>Добро пожаловать, Guest!</h5>
@@ -177,7 +60,8 @@
             <div class="personal_controllers">
                 <c:choose>
                     <c:when test="${loggedIn}">
-                        <h6><a href="j_spring_security_logout">Выход</a></h6>
+                        <h6><a href="/logout">Выход</a></h6>
+                        <%--<h6><a href="j_spring_security_logout">Выход</a></h6>--%>
                     </c:when>
                     <c:otherwise>
                         <h6><a href="/login">Вход</a></h6>
@@ -186,8 +70,8 @@
                 <c:if test="${isAdmin}">
                     <h6><a href="/admin">Админка</a></h6>
                 </c:if>
-                <c:if test="${isUser}">
-                    <h6><a href="/profile">Личный кабинет</a></h6>
+                <c:if test="${isUser || isAdmin}">
+                    <h6><a href="/profile">Профиль</a></h6>
                 </c:if>
                 <h6><a href="/cart">Корзина</a></h6>
             </div>
@@ -197,7 +81,7 @@
         <%--books/search?search_string=Javagg&search_option=TITLE--%>
         <div class="search_form">
             <form name="search_form" method="GET" action="/books/search">
-                <input type="text" name="search_string" value="<%=searchString%>" size="100"/>
+                <input type="text" name="search_string" value="${searchString}" size="100"/>
                 <input class="search_button" type="submit" value="Поиск"/>
                 <select name="search_option">
                     <option value="TITLE">Название</option>
