--- a/src/main/webapp/WEB-INF/views/jspf/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/footer.jspf
@@ -2,15 +2,13 @@
 
 <div style="clear: both; width:1100px;">&nbsp; </div>
 
-
 </div>
 
 <div class="footer">
-    Разработчик: Александр Дворцов, 2016 г.
+    Developer: Alexander Dvortsov, 2016
 </div>
 
 </div><!-- end .container -->
-
 
 
 </body>
