--- a/src/main/webapp/WEB-INF/views/jspf/adminf/add_book.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/adminf/add_book.jspf
@@ -2,7 +2,9 @@
 
 <div class="edit_penal">
 
-    <br><strong>Добавление книги</strong>
+    <br><strong>Add book</strong>
+
+    <br><td style="color: green; font-size: large; font-style: oblique">${book_added}</td>
 
     <p>&nbsp;</p>
 
@@ -15,30 +17,30 @@
                 <link rel="stylesheet" href="${pageContext.request.contextPath}/css/form.css" type="text/css"/>
 
                 <div class="field">
-                    <label for="cover">Обложка:</label><input type="file" name="cover" id="cover" multiple
+                    <label for="cover">Cover:</label><input type="file" name="cover" id="cover" multiple
                                                               accept="image/jpeg">
                 </div>
                 <div class="field">
-                    <label for="book_name">Название:</label><input name="book_name" type="text" id="book_name"
+                    <label for="name">Name:</label><input name="name" type="text" id="name"
                                                                    pattern=".{5,255}"
                                                                    required
                                                                    value="${book.name}"
-                                                                   title="Название может содержать от 5 до 255 символов">
+                                                                   title="Book name may consist by 5 to 255 characters">
                 </div>
                 <div class="field">
-                    <label for="book_isbn">ISBN:</label><input name="book_isbn" type="text" id="book_isbn"
+                    <label for="isbn">ISBN:</label><input name="isbn" type="text" id="isbn"
                                                                pattern=".{5,35}"
                                                                required
                                                                value="${book.isbn}"
-                                                               title="ISBN может содержать от 5 до 35 символов">
+                                                               title="ISBN may consist by 5 to 35 characters">
                 </div>
 
                 <div class="field">
-                    <td class="error"><form:errors path="book_isbn"/></td>
+                    <td style="color: red;"><form:errors path="isbn"/></td>
                 </div>
 
                 <div class="field">
-                    <label for="book_genre">Жанр:</label><select name="book_genre" id="book_genre">
+                    <label for="genre">Genre:</label><select name="genre" id="genre">
                     <c:forEach items="${allGenresList}" var="genre">
                         <option>${genre.name}</option>
                     </c:forEach>
@@ -46,7 +48,7 @@
                 </div>
 
                 <div class="field">
-                    <label for="book_publisher">Издательство:</label><select name="book_publisher" id="book_publisher">
+                    <label for="publisher">Publisher:</label><select name="publisher" id="publisher">
                     <c:forEach items="${allPublishersList}" var="publisher">
                         <option>${publisher.name}</option>
                     </c:forEach>
@@ -54,7 +56,7 @@
                 </div>
 
                 <div class="field">
-                    <label for="book_author">Автор:</label><select name="book_author" id="book_author">
+                    <label for="author">Author:</label><select name="author" id="author">
                     <c:forEach items="${allAuthorsList}" var="author">
                         <option>${author.name}</option>
                     </c:forEach>
@@ -62,39 +64,39 @@
                 </div>
 
                 <div class="field">
-                    <label for="book_pages">Количество страниц:</label><input name="book_pages" type="number"
-                                                                              id="book_pages" pattern="[0-9]{2,4}"
+                    <label for="pages">Pages:</label><input name="pages" type="number"
+                                                                              id="pages" pattern="[0-9]{2,4}"
                                                                               required
                                                                               value="${book.pageCount}"
-                                                                              title="Количество страниц может быть от 10 до 9999">
+                                                                              title="Input value between 10 and 9999">
                 </div>
                 <div class="field">
-                    <label for="book_year">Год издания:</label><input name="book_year" type="number" id="book_year"
+                    <label for="publishYear">Year:</label><input name="publishYear" type="number" id="publishYear"
                                                                       pattern="[0-9]{4,4}"
                                                                       required
                                                                       value="${book.publishYear}"
-                                                                      title="Год должен состоять из 4 цифр">
+                                                                      title="Input four-numeric value">
                 </div>
                 <div class="field">
-                    <label for="book_count">Количество:</label><input name="book_count" type="number" id="book_count"
+                    <label for="quantity">Quantity:</label><input name="quantity" type="number" id="quantity"
                                                                       pattern="[0-9]{1,3}"
                                                                       required
                                                                       value="${book.quantity}"
-                                                                      title="Количество экземпляров одной книги на складе может быть до 999">
+                                                                      title="Stock's quantity can be less than 999">
                 </div>
                 <div class="field">
-                    <label for="book_price">Цена, руб:</label><input name="book_price" type="number" id="book_price"
+                    <label for="price">Price, rub:</label><input name="price" type="number" id="price"
                                                                      pattern="[0-9]{1,5}"
                                                                      value="${book.price}"
-                                                                     required title="Цена может быть до 99 999 руб.">
+                                                                     required title="Input value less than 99 999">
                 </div>
 
-                <input type="hidden" name="action" value="edit"></p>
-                <p><input type="submit" value="Сохранить"></p>
+
+
+                <p><input type="submit" value="Save"></p>
             </div>
         </div>
 
-        <%--</form>--%>
     </form:form>
 
 
