--- a/src/main/webapp/WEB-INF/views/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/header.jspf
@@ -10,30 +10,12 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Онлайн-магазин</title>
+    <title>Bookstore</title>
 </head>
 <body>
 
 <div id="subViewDiv"></div>
 
-    <%
-//            request.setCharacterEncoding("UTF-8");
-//            String searchString = "";
-//
-//            if (request.getParameter("search_string") != null) {
-//                searchString = request.getParameter("search_string");
-//                session.setAttribute("search_string", searchString);
-//            } else if (session.getAttribute("search_string") != null) {
-//                searchString = session.getAttribute("search_string").toString();
-//            } else {
-//                session.setAttribute("search_string", searchString);
-//            }
-//
-//            if (request.getParameter("username") != null) {
-//                session.setAttribute("username", request.getParameter("username"));
-//            }
-
-        %>
 <div class="container">
 
     <div class="header">
@@ -42,17 +24,17 @@
 
         </div>
         <div class="descr">
-            <h3>Онлайн-магазин книг<br/> T-Systems</h3>
+            <h3>Bookstore<br/> T-Systems</h3>
 
         </div>
         <div class="welcome">
             <c:choose>
                 <c:when test="${loggedIn}">
-                    <h5>Добро пожаловать, <security:authentication
+                    <h5>Welcome, <security:authentication
                             property="principal.username"/>!</h5>
                 </c:when>
                 <c:otherwise>
-                    <h5>Добро пожаловать, Guest!</h5>
+                    <h5>Welcome, Guest!</h5>
                 </c:otherwise>
             </c:choose>
 
@@ -60,20 +42,19 @@
             <div class="personal_controllers">
                 <c:choose>
                     <c:when test="${loggedIn}">
-                        <h6><a href="/logout">Выход</a></h6>
-                        <%--<h6><a href="j_spring_security_logout">Выход</a></h6>--%>
+                        <h6><a href="/logout">Logout</a></h6>
                     </c:when>
                     <c:otherwise>
-                        <h6><a href="/login">Вход</a></h6>
+                        <h6><a href="/login">Login</a></h6>
                     </c:otherwise>
                 </c:choose>
                 <c:if test="${isAdmin}">
-                    <h6><a href="/admin">Админка</a></h6>
+                    <h6><a href="/admin">Admin</a></h6>
                 </c:if>
                 <c:if test="${isUser || isAdmin}">
-                    <h6><a href="/profile">Профиль</a></h6>
+                    <h6><a href="/profile">Profile</a></h6>
                 </c:if>
-                <h6><a href="/cart">Корзина</a></h6>
+                <h6><a href="/cart">Cart</a></h6>
             </div>
 
         </div>
@@ -81,11 +62,11 @@
         <%--books/search?search_string=Javagg&search_option=TITLE--%>
         <div class="search_form">
             <form name="search_form" method="GET" action="/books/search">
-                <input type="text" name="search_string" value="${searchString}" size="100"/>
-                <input class="search_button" type="submit" value="Поиск"/>
+                <input type="text" name="search_string" value="${searchString}" size="105"/>
+                <input class="search_button" type="submit" value="Search"/>
                 <select name="search_option">
-                    <option value="TITLE">Название</option>
-                    <option value="AUTHOR">Автор</option>
+                    <option value="TITLE">Name</option>
+                    <option value="AUTHOR">Author</option>
                     <option value="ISBN">ISBN</option>
                 </select>
             </form>
