--- a/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
+++ b/src/main/webapp/WEB-INF/views/jspf/left_menu.jspf
@@ -9,7 +9,7 @@
 <div class="sidebar1">
     <h4>Жанры:</h4>
     <ul class="nav">
-        <li><a href="/books/genre?name=all" onclick="doAjaxPost();">Все книги</a></li>
+        <li><a href="/books/genre?name=all" onclick="doAjaxPost();">All books</a></li>
         <c:forEach items="${allGenresList}" var="genre">
             <c:choose>
                 <c:when test="${genre.name eq currentGenre}">
