--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -15,7 +15,12 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section
 }
 
 .error{
-	color:red;'
+	color:red;
+}
+
+
+.success{
+	color:green;
 }
 
 blockquote,q {
